--- a/src/routes/root.css
+++ b/src/routes/root.css
@@ -12,6 +12,9 @@
         height: 53.33px
     }
 
+    .fill-up {
+        display: none;
+    }
     .container {
         margin: 0px;
         padding: 0px;
@@ -35,41 +38,68 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding-left: 30px;
-    padding-right: 30px;
+    text-align: justify;
+    padding-left: 25px;
+    padding-right: 25px;
     background-color: black;
     margin-bottom: 2px;
     border-radius: 10px;
 }
-.nav-bar .login-btn {
+
+.nav-bar .fill-up {
+    flex: 1;
+}
+
+.nav-bar .button-box button {
+    cursor: pointer;
     color: white;
     border-radius: 15px;
     background-color: #0b5ed8;
     border: none;
     width: 60px;
+    height: 30px;
+}
+
+.nav-bar .button-box button:hover {
+    background-color: rgb(21, 64, 204);
 }
 .nav-bar ul {
     width: 100%;
     padding: 0;
     display: flex;
     flex-direction: row;
+    gap: 5px;
     align-items: center;
     list-style: none;
 }
 
 .nav-bar ul a {
     text-decoration: none;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-top: 3px;
     padding-bottom: 3px;
     color: white;
+    border-radius: 10px;
+}
+
+.nav-bar ul li a:hover{
+    background-color: rgb(153, 196, 196);
+    color: black;
 }
 
 .nav-bar ul .active {
     color: black;
-    background-color: white;
-    border-radius: 5px;
+    background-color: white !important;
+    
+}
+
+.nav-bar .button-box {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 .nav-bar .hamburger {
@@ -145,4 +175,42 @@
     text-decoration: none;
     color: whitesmoke;
     font-weight: 300;
+}
+
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5px;
+    width: 100%;
+    height: 50px;
+    background-color: #0b5ed8;
+    border-radius: 10px;
+}
+
+footer div{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+footer p {
+    margin: 0!important;
+    color: white;
+    font-size: small;
+    font-weight: bolder;
+}
+
+footer .website-icon {
+    cursor: pointer;
+    font-size: larger;
+    color: white
+}
+
+footer .website-icon:hover {
+    color: black
 }
