--- a/src/login/gate.css
+++ b/src/login/gate.css
@@ -31,7 +31,7 @@
   height: 100%;
   margin: auto;
   background: rgba(7, 21, 32, 0.5);
-  border-radius: 40px;
+  border-radius: 10px;
 }
  
 .input-normal {
@@ -40,7 +40,7 @@
   margin: 30px auto;
   padding: 0;
   text-align: center;
-  border-radius: 20px;
+  border-radius: 10px;
   outline: none;
   display: block;
   transition: 0.3s;
@@ -48,13 +48,14 @@
 }
  
 .btn-submit {
-  width: 100px;
+  cursor: pointer;
+  width: 220px;
   height: 36px;
   margin: auto;
   font-size: 18px;
   text-align: center;
   color: white;
-  border-radius: 20px;
+  border-radius: 10px;
   border-width: 0;
   display: block;
   background: darkslategrey;
