--- a/src/css/blogCreatorPage.css
+++ b/src/css/blogCreatorPage.css
@@ -12,11 +12,13 @@
 
 .title-box input {
     width: 100%;
+    height: 30px;
     outline: none;
+    font-size: larger;
 }
 
 .content-box {
-    padding: 20px;
+    padding: 20px 20px 10px 20px;
     background-color: rgb(174, 191, 206);
     margin-bottom: 5px;
     border-radius: 10px;
@@ -24,8 +26,9 @@
 
 .content-box textarea {
     width: 100%;
-    height: 500px;
+    height: 75vh;
     outline: none;
+    resize: vertical;
 }
 
 .btn-group button {
