--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -20,12 +20,12 @@
 }
 .blog-container #title-box {
     grid-area: title-area;
-    background-color: antiquewhite;
+    background-color: #f1ebe6;
 }
 .blog-container #content-box {
     padding: 20px;
     grid-area: content-area;
-    background-color: antiquewhite;
+    background-color: #f1ebe6;
 }
 
 #title-box ul {
