--- a/src/css/root.css
+++ b/src/css/root.css
@@ -48,7 +48,7 @@
     padding-right: 25px;
     background-color: black;
     margin-bottom: 5px;
-    border-radius: 10px 10px 0 0 ;
+    border-radius: 10px;
 
 }
 
