--- a/src/css/article.css
+++ b/src/css/article.css
@@ -6,3 +6,7 @@
     flex-direction: row;
     justify-content: space-between;
 }
+/*.article-container .ant-input-lg{*/
+/*    font-size: 32px;*/
+/*    font-weight: bolder;*/
+/*}*/
