--- a/src/css/root.css
+++ b/src/css/root.css
@@ -3,9 +3,10 @@
     margin: auto;
     width: 60vw;
     position: relative;
+    min-height: 100vh;
 }
 
-@media screen and (max-width: 917px){
+@media screen and (max-width: 1050px){
     .container {
         width: 100%;
     }
@@ -186,14 +187,17 @@
     font-weight: 300;
     margin-bottom: 5px;;
 }
-
+#detail {
+    padding-bottom: 60px;
+}
 
 .container footer {
+    position: absolute;
+    bottom: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 5px;
     width: 100%;
     height: 50px;
     background-color: #0b5ed8;
