--- a/src/css/backgroud.css
+++ b/src/css/backgroud.css
@@ -6,6 +6,7 @@
     /*height: 200%;*/
     /*width: 100%;*/
     background: linear-gradient(180deg, #04fafd, 5%, #119dff, 50%, #030423);
+    /*background: linear-gradient(180deg, #04fdd8, 15%, #115cff, 50%, #030623);*/
     /*position: absolute;*/
     position: fixed;
     top: 0;
