--- a/src/css/gptChatroom.css
+++ b/src/css/gptChatroom.css
@@ -1,5 +1,6 @@
 .chatroom-container {
-    height: 100%;
+    width: 100%;
+    height: 100vh;
 }
 
 .chat-room-box {
@@ -8,7 +9,7 @@
     border-radius: 10px;
     overflow: scroll;
     overflow-x: hidden;
-    /*background-color: #e6e6e6;*/
+    background-color: white;
 }
 body::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
@@ -45,6 +46,8 @@ div::-webkit-scrollbar {
     max-width: 80%;
     margin: 5px;
     padding: 5px;
+    word-wrap: break-word;
+    text-align: left;
 }
 
 .chat-left {
